add hero list component

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
     <link href="../dist/rpgui.css" rel="stylesheet" type="text/css" >
     <script src="../dist/rpgui.js"></script>
     <style>
-      .all {
+      body {
           background: rgb(8, 8, 10);
       }
     </style>
   </head>
-  <body class="all">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
